tests/dataset/tpc-ds/compiler/c/q57.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:43Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:43Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int item;
  int call;
  int date;
  double price;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  const char *i_category;
  const char *i_brand;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cc_call_center_sk;
  const char *cc_name;
} call_center_t;
typedef struct {
  int len;
  call_center_t *data;
} call_center_list_t;
call_center_list_t create_call_center_list(int len) {
  call_center_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(call_center_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cat;
  int call;
  int year;
  double sum_sales;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cat;
  int call;
  double avg_sales;
} avg_by_year_item_t;
typedef struct {
  int len;
  avg_by_year_item_t *data;
} avg_by_year_item_list_t;
avg_by_year_item_list_t create_avg_by_year_item_list(int len) {
  avg_by_year_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(avg_by_year_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_category;
  double sum_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

double abs(double x) {
  if (x >= 0.0) {
    return x;
  }
  return (-x);
}

static list_int test_TPCDS_Q57_simplified_result;
static void test_TPCDS_Q57_simplified() {
  list_int tmp1 = list_int_create(0);
  int tmp2 = 1;
  if (test_TPCDS_Q57_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q57_simplified_result.len; i3++) {
      if (test_TPCDS_Q57_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.item = 1, .call = 1, .date = 1, .price = 20.0},
      (catalog_sale_t){.item = 1, .call = 1, .date = 2, .price = 20.0},
      (catalog_sale_t){.item = 1, .call = 1, .date = 3, .price = 40.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1, .i_category = "A", .i_brand = "B"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  call_center_t call_center[] = {
      (call_center_t){.cc_call_center_sk = 1, .cc_name = "C1"}};
  int call_center_len = sizeof(call_center) / sizeof(call_center[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 11},
      (date_dim_t){.d_date_sk = 2, .d_year = 2000, .d_moy = 12},
      (date_dim_t){.d_date_sk = 3, .d_year = 2001, .d_moy = 1}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  grouped_item_list_t grouped = (grouped_item_list_t){0, NULL};
  avg_by_year_item_list_t avg_by_year = (avg_by_year_item_list_t){0, NULL};
  result_item_list_t tmp4 =
      result_item_list_t_create(grouped.len * avg_by_year.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < grouped.len; tmp6++) {
    grouped_item_t g = grouped.data[tmp6];
    for (int tmp7 = 0; tmp7 < avg_by_year.len; tmp7++) {
      avg_by_year_item_t a = avg_by_year.data[tmp7];
      if (!(g.cat == a.cat && g.call == a.call)) {
        continue;
      }
      if (!(g.year == 2001 && a.avg_sales > 0 &&
            abs(g.sum_sales - a.avg_sales) / a.avg_sales > 0.1)) {
        continue;
      }
      tmp4.data[tmp5] =
          (result_item_t){.i_category = g.cat, .sum_sales = g.sum_sales};
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  result_item_list_t result = tmp4;
  printf("[");
  for (int i8 = 0; i8 < result.len; i8++) {
    if (i8 > 0)
      printf(",");
    result_item_t it = result.data[i8];
    printf("{");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("sum_sales");
    printf(":");
    _json_float(it.sum_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q57_simplified_result = result;
  test_TPCDS_Q57_simplified();
  return 0;
}
